package ru.smurtazin.models;

public class Bug extends Item {
	
}